# tauri-tests

./: README.md  next.config.mjs  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: chatgpt.md  exported.rs  maestro.rs  main.rs  server.rs  watcher.rs
src/app/: globals.css  layout.tsx  page.tsx  titlebar.module.css  titlebar.tsx
src/app/pokemon/: page.tsx
src/app/waifu/: page.tsx
src/components/: header.tsx  image-cache.tsx  titlebar.tsx
src/services/: image-caching.ts
